Removed output arguments from lambdas

--- a/bindgen/template_sub.j2
+++ b/bindgen/template_sub.j2
@@ -1,7 +1,8 @@
 {% from "macros.j2" import cls_name,pointer,super,argtypes,argnames,method_pointer,
 static_method_pointer,function_pointer,template_args_typename,template_args,
 template_method_pointer,template_static_method_pointer, template_pointer,
-prototype, pybind_overload, argtypes_names, argnames_wo_type, argnames_byref %}
+prototype, pybind_overload, argtypes_names, argnames_wo_type, argnames_byref,
+argtypes_names_not_byref, init_outputs_byref, argnames_not_byref %}
 
 // std lib related includes
 #include <tuple>
@@ -130,8 +131,8 @@ py::module m = static_cast<py::module>(main_module.attr("{{module.name}}"));
     {% for m in c.methods_byref %}
     {% if not m.pointer_by_ref %}
         .def("{{m.name}}",
-             []( {{c.name}} &self, {{argtypes_names(m)}} ){ self.{{m.name}}({{argnames_wo_type(m)}}); return std::make_tuple({{argnames_byref(m)}}); },
-             R"#({{m.comment}})#" {{argnames(m)}})
+             []( {{c.name}} &self {{ "," if argtypes_names_not_byref(m)|length}} {{argtypes_names_not_byref(m)}} ){ {{init_outputs_byref(m)}}; self.{{m.name}}({{argnames_wo_type(m)}}); return std::make_tuple({{argnames_byref(m)}}); },
+             R"#({{m.comment}})#" {{argnames_not_byref(m)}})
     {% endif %}
     {% endfor %}
     // static methods
@@ -146,8 +147,8 @@ py::module m = static_cast<py::module>(main_module.attr("{{module.name}}"));
     {% for m in c.static_methods_byref %}
     {% if not m.pointer_by_ref %}
         .def_static("{{m.name}}_s",
-                    []( {{argtypes_names(m)}} ){ {{c.name}}::{{m.name}}({{argnames_wo_type(m)}}); return std::make_tuple({{argnames_byref(m)}}); },
-                    R"#({{m.comment}})#" {{argnames(m)}})
+                    []( {{argtypes_names_not_byref(m)}} ){ {{init_outputs_byref(m)}}; {{c.name}}::{{m.name}}({{argnames_wo_type(m)}}); return std::make_tuple({{argnames_byref(m)}}); },
+                    R"#({{m.comment}})#" {{argnames_not_byref(m)}})
     {% endif %}
     {% endfor %}
     // operators
