--- a/bindgen/macros.j2
+++ b/bindgen/macros.j2
@@ -31,6 +31,14 @@
     {% for arg,t,_ in f.args %}{{ t }} {{ arg }}{{ "," if not loop.last }}{% endfor %}
 {%- endmacro -%}
 
+{%- macro argtypes_names_not_byref(f) -%}
+    {% for arg,t,_ in f.args if not is_byref(t) %}{{ t }} {{ arg }}{{ "," if not loop.last }}{% endfor %}
+{%- endmacro -%}
+
+{%- macro init_outputs_byref(f) -%}
+    {% for arg,t,_ in f.args if is_byref(t) %}{{ t[:-1] }} {{ arg }}{{ "; " if not loop.last }}{% endfor %}
+{%- endmacro -%}
+
 {%- macro argnames_wo_type(f) -%}
     {% for arg,t,_ in f.args %}{{ arg }}{{ "," if not loop.last }}{% endfor %}
 {%- endmacro -%}
@@ -41,6 +49,10 @@
 
 {%- macro argnames(f) -%}
     {% for arg,t,d in f.args %} {{ "," if loop.first }} py::arg("{{arg}}"){% if d %}=static_cast<{{t}}>({{d}}){% endif %}{{ "," if not loop.last }}{% endfor %}
+{%- endmacro -%}
+
+{%- macro argnames_not_byref(f) -%}
+    {% for arg,t,d in f.args if not is_byref(t) %} {{ "," if loop.first }} py::arg("{{arg}}"){% if d %}=static_cast<{{t}}>({{d}}){% endif %}{{ "," if not loop.last }}{% endfor %}
 {%- endmacro -%}
 
 {%- macro method_pointer(cls,f) -%}
