Template fixes related to multiple inheritance

--- a/bindgen/template_sub.j2
+++ b/bindgen/template_sub.j2
@@ -107,13 +107,13 @@ py::module m = static_cast<py::module>(main_module.attr("{{module.name}}"));
 {% endif %}{% endfor %}
 
 // classes
-{% for c in module.classes %}{% if (proper_new_operator(c) and proper_delete_operator(c)) or c.rootclass =='Standard_Transient' %}
+{% for c in module.classes %}{% if (proper_new_operator(c) and proper_delete_operator(c)) or 'Standard_Transient' in  c.rootclass %}
 
     {% if not c.constructors_unfiltered and not c.nonpublic_constructors and not c.abstract %}
     register_default_constructor<{{c.name}} {{pointer(c)}}>(m,"{{c.name}}");
     {% endif %}
 
-    static_cast<py::class_<{{c.name}} {{pointer(c)}} {% if c.abstract %},Py_{{c.name}}{% endif %} {{super(c,class_dict)}}>>(m.attr("{{cls_name(c)}}"))
+    static_cast<py::class_<{{c.name}} {{pointer(c)}} {% if c.abstract %},Py_{{c.name}}{% endif %} {{super(c,class_dict,module.typedef_dict)}}>>(m.attr("{{cls_name(c)}}"))
     {% for con in c.constructors %}
     {% if not con.pointer_by_ref %}
         .def(py::init< {{ argtypes(con) }} >() {{argnames(con)}} )
@@ -188,7 +188,6 @@ py::module m = static_cast<py::module>(main_module.attr("{{module.name}}"));
 
 // register typdefs
 {% for h in module.headers %}
-// {{h.name}}
 {% for td in h.typedefs %}
 {% if not td.pod and not "_H" in td.name and td.template_base.__len__()>0 and not td.type.startswith("opencascade::handle") %}
 {% set dep_module = td.template_base[0].split("_") %}
