--- a/bindgen/template_templates.j2
+++ b/bindgen/template_templates.j2
@@ -65,7 +65,7 @@ void register_template_{{t.name}}(py::object &m, const char *name){
     {% endfor %}
     {% if "begin" in t.methods_dict and "end" in t.methods_dict %}
         .def("__iter__",[](const {{t.name}}{{template_args(t)}} &self)
-             { return py::make_iterator(self.begin(), self.end()); },
+             { return py::make_iterator<py::return_value_policy::copy>(self.begin(), self.end()); },
              py::keep_alive<0, 1>())
     {% endif %}
     ;
