--- a/bindgen/template_sub.j2
+++ b/bindgen/template_sub.j2
@@ -117,8 +117,8 @@ py::module m = static_cast<py::module>(main_module.attr("{{module.name}}"));
     static_cast<py::class_<{{c.name}} {{pointer(c)}} {% if c.abstract %},Py_{{c.name}}{% endif %} {{super(c,class_dict,module.typedef_dict)}}>>(m.attr("{{cls_name(c)}}"))
     // constructors
     {% for i,con in enumerate(c.constructors) %}
-    {% if not con.pointer_by_ref or 
-       not i in module_settings['Classes'].get(c.name,{}).get('exclude_constructors',[])  %}
+    {% if (not con.pointer_by_ref) and 
+          (not i in module_settings['Classes'].get(c.name,{}).get('exclude_constructors',[]))  %}
         .def(py::init< {{ argtypes(con) }} >() {{argnames(con)}} )
     {% endif %}
     {% endfor %}
