CMakeLists typo fix

--- a/bindgen/CMakeLists.j2
+++ b/bindgen/CMakeLists.j2
@@ -4,7 +4,7 @@ project( {{ name }}
 
 list( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR} )
 
-set( PYTHON_EXECUTABLE $ENV{$CONDA_PREFIX}/python )
+set( PYTHON_EXECUTABLE "$ENV{CONDA_PREFIX}/bin/python" )
 
 find_package( pybind11 REQUIRED )                   
 find_package( OpenCascade REQUIRED COMPONENTS OPENCASCADE )
