--- a/bindgen/CMakeLists.j2
+++ b/bindgen/CMakeLists.j2
@@ -4,7 +4,11 @@ project( {{ name }}
 
 list( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR} )
 
-set( PYTHON_EXECUTABLE "$ENV{CONDA_PREFIX}/bin/python" )
+if(WIN32)
+  set( PYTHON_EXECUTABLE "$ENV{CONDA_PREFIX}/python.exe" )
+else()
+  set( PYTHON_EXECUTABLE "$ENV{CONDA_PREFIX}/bin/python" )
+endif()
 
 find_package( pybind11 REQUIRED )                   
 find_package( OpenCascade REQUIRED COMPONENTS OPENCASCADE )
