--- a/bindgen/CMakeLists.j2
+++ b/bindgen/CMakeLists.j2
@@ -7,6 +7,10 @@ list( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR} )
 if(WIN32)
   set( PYTHON_EXECUTABLE "$ENV{CONDA_PREFIX}/python.exe" )
   add_compile_definitions( _hypot=hypot )
+  execute_process(COMMAND ${PYTHON_EXECUTABLE} -c "from sys import version_info as vi; print(f'{vi.major}{vi.minor}')"
+                  OUTPUT_VARIABLE PYTHON_VER )
+  string(STRIP ${PYTHON_VER} PYTHON_VER)
+  set( PYTHON_LIBRARY $ENV{CONDA_PREFIX}/libs/python${PYTHON_VER}.lib )
 else()
   set( PYTHON_EXECUTABLE "$ENV{CONDA_PREFIX}/bin/python" )
 endif()
