--- a/bindgen/CMakeLists.j2
+++ b/bindgen/CMakeLists.j2
@@ -6,7 +6,7 @@ list( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR} )
 
 if(WIN32)
   set( PYTHON_EXECUTABLE "$ENV{CONDA_PREFIX}/python.exe" )
-  add_compile_definitions( _hypot=hypot )
+  add_compile_definitions( _hypot=hypot _AMD64_ _WINDOWS)
   execute_process(COMMAND ${PYTHON_EXECUTABLE} -c "from sys import version_info as vi; print(f'{vi.major}{vi.minor}')"
                   OUTPUT_VARIABLE PYTHON_VER )
   string(STRIP ${PYTHON_VER} PYTHON_VER)
@@ -27,12 +27,16 @@ target_link_libraries( {{ name }} PRIVATE OPENCASCADE pybind11::module )
 set_target_properties( {{ name }}
                        PROPERTIES
                        CXX_STANDARD 17
-                       CMAKE_CXX_FLAGS_RELEASE "-O3 "
-                       COMPILE_FLAGS "-fpermissive -fvisibility=hidden -fvisibility-inlines-hidden"
                        INTERPROCEDURAL_OPTIMIZATION FALSE
                        PREFIX "${PYTHON_MODULE_PREFIX}"
                        SUFFIX "${PYTHON_MODULE_EXTENSION}" )
 
 if(WIN32)
-  target_compile_options( {{ name }} PRIVATE -Wa,-mbig-obj )
+  target_compile_options( OCP PRIVATE /bigobj )
+  target_link_libraries( OCP PRIVATE opengl32 )
+else()
+  set_target_properties( OCP
+                         PROPERTIES
+                         CMAKE_CXX_FLAGS_RELEASE "-O3 "
+                         COMPILE_FLAGS "-fpermissive -fvisibility=hidden -fvisibility-inlines-hidden" )
 endif()
