Get rid of undefined

--- a/bindgen/CMakeLists.j2
+++ b/bindgen/CMakeLists.j2
@@ -42,5 +42,5 @@ else()
 endif()
 
 if(APPLE)
-  target_link_libraries( OCP PRIVATE "-undefined warning" )
+  #target_link_libraries( OCP PRIVATE "-undefined warning" )
 endif()
