--- a/bindgen/CMakeLists.j2
+++ b/bindgen/CMakeLists.j2
@@ -23,7 +23,7 @@ file( GLOB CPP_FILES ${PROJECT_SOURCE_DIR}/*.cpp )
 
 add_library( {{ name }} MODULE ${CPP_FILES} )
 
-target_link_libraries( {{ name }} PRIVATE OPENCASCADE pybind11::pybind11 )
+target_link_libraries( {{ name }} PRIVATE OPENCASCADE pybind11::module )
 set_target_properties( {{ name }}
                        PROPERTIES
                        CXX_STANDARD 17
